--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "request-header-parser-microservice",
   "version": "0.0.2",
-  "description": "API project for freeCodeCamp",
+  "description": "Basic API project for parsing and displaying basic header information",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-headerparser.git"
+    "url": "https://github.com/footedroom575/Request-Header-Parser-Microservice.git"
   },
   "bugs": {
-    "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
+    "url": "https://github.com/footedroom575/Request-Header-Parser-Microservice/issues"
   },
-  "homepage": "https://github.com/freeCodeCamp/boilerplate-project-headerparser#readme",
-  "author": "freeCodeCamp <team@freecodecamp.org>",
+  "homepage": "https://github.com/footedroom575/Request-Header-Parser-Microservice.git#readme",
+  "author": "Ahsan <footedroom575@gmail.com>",
   "keywords": [
-    "freeCodeCamp",
+    "header",
     "node",
     "express"
   ],
